# Arshin_pub

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  pyproject.toml
app/exceptions/: exceptionHandlers.py
app/models/: postgres.py
app/repositories/: __init__.py  auth.py  main.py  statistics.py
app/routes/: __init__.py  arshin.py  auth.py  limsClient.py  statistics.py
app/schemas/: __init__.py  arshin.py  auth.py  error.py  limsClient.py  statistics.py
app/services/: authorization.py  errorHandler.py  logging.py  main.py  statistics.py
app/startups/: db.py  routesStartup.py
docker/: Dockerfile
tests/: conftest.py  test_checkEquipment.py  test_imreciseSearch.py  test_statistics.py  test_token.py  test_vri.py
